sanger/sites/developmentcellatlas/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: developmentcellatlas
spec:
  selector:
    matchLabels:
      app: developmentcellatlas
  replicas: 2
  template:
    metadata: 
      name: developmentcellatlas
      labels:
        app: developmentcellatlas
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: developmentcellatlas-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.11.0
        imagePullPolicy: IfNotPresent
        name: developmentcellatlas
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["cellxgene", "launch", "/data/fetal_liver_alladata_.h5ad", "-t", "Fetal liver", "--host", "0.0.0.0", "--port", "5005"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "512M"
            cpu: "0.5"
          limits:
            memory: "20Gi"
            cpu: 1
