sanger/sites/developmentcellatlas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: developmentcellatlas
  labels:
    app: developmentcellatlas
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: developmentcellatlas
