sanger/sites/developmentcellatlas/ingress.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: developmentcellatlas
spec:
  virtualhost:
    fqdn: developmentcellatlas.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: developmentcellatlas
          port: 80
---
